@@ -14,7 +14,7 @@ PLHOME=..\..
 LIBDIR=		$(PLBASE)\library\semweb
 PKGDLL=rdf_db
 
-LIBPL=		rdf_db.pl rdfs.pl rdf_edit.pl
+LIBPL=		rdf_db.pl rdfs.pl rdf_edit.pl rdf_litindex.pl
 DATA=		rdfs.rdfs dc.rdfs eor.rdfs owl.owl
 OBJ=		rdf_db.obj md5.obj atom_set.obj atom_map.obj atom.obj
 		lock.obj debug.obj
