@@ -1,6 +1,7 @@
 Mar 7, 2006
 
   * Completed integration of new AVL implementation.
+  * Added rdf_litindex.pl
 
 Mar 2, 2006
 
